# arweave_downloader

./: .gitignore  Cargo.toml  README.md  output
src/: main.rs
