[package]
name = "arweave_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
clap = "2.26.0"

[[bin]]
edition = "2021"
name = "downloader"
path = "src/main.rs"